--- a/public/css/guest/galeri.css
+++ b/public/css/guest/galeri.css
@@ -128,3 +128,16 @@ body {
     cursor: pointer;
     z-index: 10000;
 }
+
+.pagination .page-link {
+    border-radius: 50px;
+    margin: 0 5px;
+    border: none;
+    color: #16a34a;
+}
+
+.pagination .page-link:hover,
+.pagination .page-item.active .page-link {
+    background: linear-gradient(135deg, #16a34a, #059669);
+    color: white;
+}
